@@ -1,5 +1,15 @@
 2005-10-20  Marcus Brinkmann  <marcus@g10code.de>
 
+	* m4/gpg4win.m4 (GPG4WIN_DEFINE): New function.  Use it to define
+	feature symbols for NSI.  Use m4_translit instead of m4_bpatsubst.
+	New option --enable-debug.
+	* include/config.nsi.in: Catch all this new information.
+	* src/gpg4win.nsi (DEBUG): Define if [GPG4WIN_DEBUG].
+	(HAVE_PKG_GPA): Don't define here.
+	* src/inst-sections.nsi: Guard all package specific commands with
+	feature macro checks.  Calculate dependencies on .onInit, too.
+	* src/gpg4win.mk.in (STRIP_macro): Quote $(DEBUG) strictly.
+
 	* src/installer-finish.nsi: Add support for Add/Remove Programs.
 
 2005-10-20  Werner Koch  <wk@g10code.com>
